// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots should render Heading1 with appropriate styles 1`] = `
<h1
  className="fl-heading1 css-41xlmr-Heading1-BaseText-Heading1 e4p1v738"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h1>
`;

exports[`Text Snapshots should render Heading2 with appropriate styles 1`] = `
<h2
  className="fl-heading2 css-1ycstr5-Heading2-BaseText-Heading2 e4p1v739"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h2>
`;

exports[`Text Snapshots should render Heading3 with appropriate styles 1`] = `
<h3
  className="fl-heading3 css-xh28yu-Heading3-BaseText-Heading3 e4p1v7310"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h3>
`;

exports[`Text Snapshots should render Heading4 with appropriate styles 1`] = `
<h4
  className="fl-heading4 css-12fncb-Heading4-BaseText-Heading4 e4p1v7311"
  color="textHeading"
  fontWeight="bold"
  letterSpacing={3}
>
  My Heading
</h4>
`;

exports[`Text Snapshots should render TextLink with appropriate styles 1`] = `
<a
  className="fl-textlink css-1juad12-TextLink-Text-TextLink e4p1v7312"
  href="www.google.com"
>
  My Heading
</a>
`;
